# quazip

./: .clang-format  .clang-tidy  .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  COPYING  Doxyfile  EXAMPLES.md  JlCompress_8h_source.html  NEWS.txt  QuaCompress_8h_source.html  QuaExtract_8h_source.html  QuaZip-1.x-migration.md  QuaZipConfig.cmake  QuaZipConfig.cmake.in  README.md  README_pages.md  RELEASE.md  annotated.html  classJlCompress-members.html  classJlCompress.html  classJlCompress_1_1Options-members.html  classJlCompress_1_1Options.html  classQuaAdler32-members.html  classQuaAdler32.html  classQuaAdler32__coll__graph.map  classQuaAdler32__inherit__graph.dot  classQuaChecksum32-members.html  classQuaChecksum32.html  classQuaChecksum32__inherit__graph.dot  classQuaChecksum32__inherit__graph.map  classQuaCompress-members.html  classQuaCompress.html  classQuaCrc32-members.html  classQuaCrc32.html  classQuaCrc32__coll__graph.map  classQuaCrc32__inherit__graph.dot  (+170 more)
.github/docker/qt-5.15.12/: Dockerfile
.github/docker/qt-6.4.3/: Dockerfile
.github/docker/qt-6.6.2/: Dockerfile
.github/docker/qt-6.6.2-ubuntu-static/: Dockerfile
.github/docker/qt-6.8.2-ubuntu-static/: Dockerfile
.github/workflows/: abi-check.yml  ci.yml  qt-zlib.yml  reusable-win.yml  reusable.yml  scorecard.yml  utf8.yml  zlib-ng.yml
cmake/: clone-repo.cmake  windeployqt.cmake
quazip/: CMakeLists.txt  Doxyfile  FindQuaZip.cmake  JlCompress.cpp  JlCompress.h  JlOptions.cpp  NEWS  NEWS.txt  QuaCompress.cpp  QuaCompress.h  QuaExtract.cpp  QuaExtract.h  QuaZipConfig.cmake.in  README  README.txt  ioapi.h  minizip_crypt.h  qioapi.cpp  quaadler32.h  quachecksum32.h  quacrc32.h  quagzipfile.cpp  quagzipfile.h  quaziodevice.cpp  quaziodevice.h  quazip.cpp  quazip.h  quazip.pc.cmakein  quazip.pri  quazip.pro  quazip.sln  quazip.vcxproj  quazip5.pro  quazip_config.h.in  quazip_global.h  quazip_qt_compat.h  quazip_textcodec.cpp  quazip_textcodec.h  quazip_version.h.cmakein  quazipdir.cpp  (+11 more)
quazip/doc/: faq.dox  index.dox  usage.dox
quazip/quazip/: CMakeLists.txt  JlCompress.cpp  JlCompress.h  crypt.h  ioapi.c  ioapi.h  qioapi.cpp  quagzipfile.cpp  quaziodevice.cpp  quazip.cpp  quazip.h  quazip.pro  quazip.vcproj  quazip.vcxproj  quazip.vcxproj.filters  quazip_global.h  quazipdir.cpp  quazipdir.h  quazipfile.cpp  quazipfile.h  quazipfileinfo.cpp  quazipfileinfo.h  quazipnewinfo.cpp  quazipnewinfo.h  run_moc.bat  unzip.c  unzip.h  zip.c  zip.h
quazip/quazip/doc/: index.dox  usage.dox
quazip/qztest/: coverage.sh  qztest.cpp  qztest.h  qztest.pro  qztest.vcxproj  qztest.vcxproj.filters  testjlcompress.cpp  testjlcompress.h  testquachecksum32.cpp  testquachecksum32.h  testquagzipfile.cpp  testquagzipfile.h  testquaziodevice.cpp  testquaziodevice.h  testquazip.cpp  testquazip.h  testquazipdir.cpp  testquazipdir.h  testquazipfile.cpp  testquazipfile.h  testquazipfileinfo.cpp  testquazipnewinfo.cpp  testquazipnewinfo.h
quazip/test/: CMakeLists.txt  qztest.cpp  qztest.h  qztest.pro  qztest.vcproj  run_moc.bat  testjlcompress.cpp  testquagzipfile.cpp  testquaziodevice.cpp  testquazip.cpp  testquazip.h  testquazipdir.cpp  testquazipdir.h  testquazipfile.cpp  testquazipfile.h
quazip/test/checksum/: CMakeLists.txt
quazip/test/jlcompress/: CMakeLists.txt
quazip/test/unzip/: CMakeLists.txt  main.cpp  unzip.pro
quazip/test/zip/: CMakeLists.txt  main.cpp  zip.pro
qztest/: CMakeLists.txt  qztest.cpp  qztest.h  qztest.pro  testjlcompress.cpp  testjlcompress.h  testjlcp_compress.cpp  testjlcp_compress.h  testjlcp_extract.cpp  testjlcrossplatform.cpp  testjlcrossplatform.h  testquachecksum32.cpp  testquachecksum32.h  testquacompress.cpp  testquacompress.h  testquagzipfile.cpp  testquagzipfile.h  testquaziodevice.cpp  testquaziodevice.h  testquazip.cpp  testquazip.h  testquazipdir.cpp  testquazipdir.h  testquazipfile.cpp  testquazipfile.h  testquazipfileinfo.cpp  testquazipfileinfo.h  testquazipnewinfo.cpp  testutf8_compress.cpp  testutf8_compress.h  testutf8_decompress.cpp  testutf8_decompress.h
